--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@
 *.zip
 *.tar.gz
 *.rar
+*.lst
+*.original
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -26,3 +28,9 @@ hs_err_pid*
 
 /*/*.iml
 /api-gateway-center.iml
+
+/*/*.iml
+
+
+/*/target/
+
