--- a/api-gateway-center-03/pom.xml
+++ b/api-gateway-center-03/pom.xml
@@ -9,7 +9,7 @@
     <groupId>cn.yong.gateway</groupId>
     <version>1.0-SNAPSHOT</version>
 
-    <packaging>war</packaging>
+<!--    <packaging>war</packaging>-->
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.34</version>
+            <version>8.0.22</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
