--- a/api-gateway-center-03/src/main/resources/application-dev.yml
+++ b/api-gateway-center-03/src/main/resources/application-dev.yml
@@ -1,13 +1,13 @@
 server:
-  port: 8066
+  port: 80
 
 spring:
   datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: Sunnyday1711
-    url: jdbc:mysql://rm-wz943nx257hyn554v2o.mysql.rds.aliyuncs.com/mybatis?useUnicode=true&useSSL=false
-    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://rm-wz943nx257hyn554v2o.mysql.rds.aliyuncs.com/api-gateway??useUnicode=true&characterEncoding=utf8&useSSL=false
 
 mybatis:
-  mapper-locations: classpath:/mapper/*.xml
+  mapper-locations: classpath:/**/*.xml
   config-location:  classpath:/config/mybatis-config.xml
