--- a/api-gateway-center-06/pom.xml
+++ b/api-gateway-center-06/pom.xml
@@ -78,6 +78,12 @@
             <artifactId>mapstruct-processor</artifactId>
             <version>1.4.2.Final</version>
         </dependency>
+        <!-- 添加redis依赖模块 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.0.6.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
